--- a/level-1/step-2/step-2.css
+++ b/level-1/step-2/step-2.css
@@ -1,12 +1,14 @@
 /* Step-2 You can assign padding to all sides of a container by using the padding shorthand property. */
 
 .content-left {
+    padding: 10px;
  
 }
 
 /* Step 2 You can assign padding to all sides of a container by using the padding shorthand property. */
 
 .header {
+    padding: 10px
   
 }
 
@@ -15,6 +17,7 @@
 
 .profile-image-container {
     background: #96F0F2;
+    width: auto;
 }
 
 /* Step-2 One option to get the container to fill the parent container is to use width: auto; */
@@ -27,6 +30,7 @@
 
 .logo-container {
     background: #4F4949;
+    
 }
 
 
